New controller structure. Updated /occ endpoint.
swagger.yaml:
        - Define the routing of endpoints for separate source files.
        - Remove underscores from ELC parameter names. These awkwardly
        remap to camel case within the controller. This is likely an
        artifact of the Java sanitzeName ifunction in swagger-codegen
        which may not be required to run again as Connexion lifts the
        routing information directly from the OpenAPI spec file and we
        no longer need server stub (such as it was) generation.

*.py:
        - The new per-file endpoint controllers. default_controller no
        longer needed.

taxonomic_occurrence_controller.py:
        - Wall time calculated for both DB API calls.
        - includelower is now default parameter setting unless
        includelower=false is included.
