# controllers/geoloc_site_controller.py
@@ -1,0 +1,3 @@
+
+def site(occid = None, bbox = None, minage = None, maxage = None, agescale = None, timerule = None, taxon = None, includelower = None) -> str:
+    return 'site endpoint'
