# controllers/gridded_assemblage_controller.py
@@ -1,0 +1,3 @@
+
+def grid(agebound = None, agebin = None, ageunit = None, bbox = None, spatialbin = None, varunit = None, presence = None) -> str:
+    return 'grid endpoint'
