# controllers/publication_controller.py
@@ -1,0 +1,3 @@
+
+def pub(occid = None, siteid = None, format = None) -> str:
+    return 'pub endpoint'
