# controllers/taxonomic_hierarchy_controller.py
@@ -1,0 +1,3 @@
+
+def taxon(taxon = None, includelower = None, hierarchy = None) -> str:
+    return 'taxon endpoint'
